# Monolith

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  PROVENANCE.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  architecture.md  bootstrap.py  changes.patch  check_addons.py  codex_sse_listener.py  combiner.py  health_check.py  index.html  install.bat  main.py  monolith_source.txt  pyproject.toml  requirements.txt  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
README/: Kernel_Contract.txt  Kernel_Contract_v2.txt  architecture.md  requirement.txt  v0.3a_brief.md
core/: active_agents.py  acu_mirror.py  acu_retrieval.py  acu_store.py  adaptive_budget.py  addon_manifest.py  attached_blocks.py  branch_classify.py  branch_solve.py  branch_tree.py  channel_tag.py  chat_finalize.py  cloud_profiles.py  cmd_parser.py  command_feedback.py  confidence_trajectory.py  config.py  context_profiles.py  context_refresh.py  continuity.py  ctx_window.py  curiosity.py  curiosity_capture.py  db_connect.py  effort_resolver.py  ephemeral_coalescer.py  event_ledger.py  failure_tags.py  fault_detectors.py  fault_response.py  fault_telemetry.py  friction_differ.py  friction_organ.py  friction_settle.py  friction_store.py  friction_telemetry.py  generation.py  grounded_verdict.py  health.py  history_compactor.py  (+100 more)
docs/: AGENT_SYSTEM_SPEC_V1.md  ARCHITECTURE.md  CONFIGURATION.md  Evolution_Goverance.txt  INSTALLATION.md  README.md  RUNTIME_AWARENESS_SPEC.md  STEP7_COMPLETION.md  STEPWISE_RUNTIME.md  WAIT_ACK_FLOW.md  capability_authorization_audit.md  desktop.ini  (+8 more)
(+795 files in other folders)
