[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monolith-workstation"
version = "1.0.0"
description = "Windows-first, local-first desktop AI workstation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Eryndel (Erick Ascano-Marin)" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Win32 (MS Windows)",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "PySide6>=6.10,<7",
  "pydantic>=2.6,<3",
  "PyYAML>=6.0.1,<7",
  "Markdown>=3.4,<4",
  "Pygments>=2.17,<3",
]

[project.optional-dependencies]
files = [
  "PyMuPDF>=1.24,<2",
  "pypdf>=4,<7",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "Pillow>=10,<13",
]
local-llm = [
  "llama-cpp-python>=0.3,<0.4",
]
vision = [
  "torch>=2.4",
  "diffusers>=0.35,<1",
  "transformers>=4.57,<6",
  "accelerate>=1.11,<2",
  "Pillow>=10,<13",
]
audio = [
  "torch>=2.4",
  "torchaudio>=2.4,<2.9",  # 2.9+ delegates save() to the separate torchcodec package
  "audiocraft>=1.3,<2",
]
matrix = [
  "matrix-nio>=0.24,<1",
  "aiohttp>=3.9,<4",
]
dev = [
  "pytest>=9,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["addons*", "core*", "engine*", "monokernel*", "ui*"]
exclude = ["tests*", "skills*", "tools*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt", "*.yaml", "*.yml"]
